tests/ui/const-generics/ice-const-generic-unevaluated-145138.stderr
error[E0493]: destructor of `T` cannot be evaluated at compile-time
  --> $DIR/ice-const-generic-unevaluated-145138.rs:24:17
   |
LL |             let mut one = T::ONE;
   |                 ^^^^^^^ the destructor for this type cannot be evaluated in constant functions
...
LL |         }
   |         - value is dropped here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0493`.
